...
                VStack(alignment: .leading, spacing: 20) {
                    infoSection
                    linkSection
                    shareButton
                }
                .padding(.horizontal, 18)
                .navigationTitle("Inviter")
                .navigationBarTitleDisplayMode(.large)
                .toolbar {
                    ToolbarItem(placement: .cancellationAction) {
                        CloseButtonView { dismiss() }
                    }
                }
...
		} label: {
			HStack {
                Image.copyActionIcon
			}
			.padding(.trailing, 12)
		}
        .accessibilityIdentifier("invite_copy_link")
        .buttonStyle(SecondaryTextButtonStyle())
        .frame(maxHeight: .infinity)
    }
    
    private var shareButton: some View {
		Button {
...
