...
                    Label("Fra kalender til feedback", systemImage: "questionmark.circle")
                }

                Button {
                    store.send(.createEventButtonTapped)
                } label: {
                    Label("Opret session", systemImage: "plus")
                }
                .accessibilityIdentifier("activity_detail_create_session_menu_button")

                Button {
                    store.send(.editActivityButtonTapped)
                } label: {
...
                }
            } label: {
                Image(systemName: "ellipsis")
            }
            .buttonStyle(PrimaryTextButtonStyle())
            .accessibilityLabel("Flere handlinger for aktivitet")
            .accessibilityIdentifier("activity_detail_actions_menu_button")
        }
    }

    private func sessionsSection(
        sessionSections: [EventListSection],
        eventTitle: String,
...
