...
                        }
                    }
                    
                }
            }
            .foregroundStyle(Color.themeText)
            .navigationTitle("Aktiviteter")
            .navigationBarTitleDisplayMode(.large)
            .toolbar {
                ToolbarItem(placement: .cancellationAction) {
                    CloseButtonView { dismiss() }
                }
            }
...
